# PicSplit

./: .gitignore  README.md  app.py  main.py  pyproject.toml
backend/: app.py  asset-manifest.json  index.html
backend/static/css/: main.f03f5e8b.css  main.f03f5e8b.css.map
backend/static/js/: main.7592a614.js  main.7592a614.js.LICENSE.txt  main.7592a614.js.map
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.css
frontend/src/components/: APIKeyInput.js  BillSummary.js  BillUploader.js  ItemAllocationCard.js  PersonSetup.js
