[tool.poetry]
name = "bill-splitter"
version = "0.1.0"
description = ""
authors = ["nikhil.pandey"]
readme = "README.md"
packages = [{include = "backend"}]
# You can adjust the package path as needed

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
pytesseract = ">=0.3.13,<0.4.0"
google-genai = ">=1.1.0,<2.0.0"
streamlit = ">=1.42.0,<2.0.0"
flask = ">=3.1.0,<4.0.0"
flask-cors = ">=5.0.1,<6.0.0"
gunicorn = ">=23.0.0,<24.0.0"
python-dotenv = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
